--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,9 @@ services:
     restart: always
     ports:
       - "7000:7000"
+  worker:
+    build: ./worker
+    restart: always
+    pids_limit: 60
+    cpus: 1
+    mem_limit: 150M
