--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,21 @@ services:
   rabbitmq:
     image: "rabbitmq"
     restart: always
+
   server:
     build: ./server
     restart: always
     ports:
       - "7000:7000"
+    depends_on:
+      - rabbitmq
+      
   worker:
     build: ./worker
     restart: always
     pids_limit: 60
     cpus: 1
     mem_limit: 150M
+    depends_on:
+      - rabbitmq
+      - server
