--- a/worker/package.json
+++ b/worker/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "amqplib": "^0.10.3"
+    "amazon-s3-uri": "^0.1.1",
+    "amqplib": "^0.10.3",
+    "aws-sdk": "^2.1254.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {},
   "scripts": {
