Code execution in container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,3 +21,5 @@ services:
     depends_on:
       - rabbitmq
       - server
+    volumes:      
+      - /var/run/docker.sock:/var/run/docker.sock
