--- a/worker/package.json
+++ b/worker/package.json
@@ -7,6 +7,7 @@
     "amazon-s3-uri": "^0.1.1",
     "amqplib": "^0.10.3",
     "aws-sdk": "^2.1254.0",
+    "dockerode": "^3.3.4",
     "dotenv": "^16.0.3"
   },
   "devDependencies": {},
