added support for c++ code execution

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,3 +23,8 @@ services:
       - server
     volumes:      
       - /var/run/docker.sock:/var/run/docker.sock
+      - shared:/app/shared
+
+volumes:
+  shared:
+    external: true
