--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -6,4 +6,6 @@ RUN npm install
 COPY . .
 
 RUN apk update && apk add --no-cache bash
+RUN apk add --update docker openrc
+RUN rc-update add docker boot
 CMD ["npm","start"]
